--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -4,25 +4,31 @@
 # Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+
+# image: localhost:5000/ubuntu-cpptests:20.04
+
 stages:
   - build
   - test
 
-
 build:
-  stage: build
-  retry:
-    max: 2
+  - rm -Rf build  # Guarantee that tests and coverage are using latest src and tests
+  - mkdir build
+  - cd build
+  - cmake ..
+  - make -j8
+
+test:
+  only:
+    - master
   tags:
     - dtMath_CMake_tag_windows
   script:
-    - git submodule update --init
-    - mkdir build
-    - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=Release -DTEST_PROJECT=ON
-    - cmake --build . --config Release
-
-# sast:
-#   stage: test
-
-
+    - ./bin/test
+    - ls -l
+    - cd CMakeFiles/test.dir/
+    - ls -l
+    - lcov -d . -c -o coverage.info
+    - lcov -r coverage.info */build/* */tests/* */c++/* -o coverageFiltered.info
+    - lcov --list coverageFiltered.info
+  coverage: '/Total:\|\s*([0-9.]+%)\s.*$/'
