--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build:
     # - dtMath_CMake_tag_windows
     - ros-noetic
   script:
+    - apt update && DEBIAN_FRONTEND=noninteractive apt install -y git-core
     - rm -Rf build  # Guarantee that tests and coverage are using latest src and tests
     - mkdir build
     - cd build
