--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,13 +53,13 @@ include:
 
 code_quality:
   rules:
-    - if: $CI_COMMIT_BRANCH == "release"
+    - if: $CI_COMMIT_BRANCH == "main"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   services:
   tags:
     - cq-sans-dind
 
 sast:
-  stage: test
+  stage: sast
 
 
