--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,11 @@
 # image: localhost:5000/ubuntu-cpptests:20.04
 
 stages:
-  - sast
-  - build
   - test
+  - build
 
-# Job name 'build'
-build:
-# Runs at 'build' stage
-  stage: build
-  tags:
-    # - dtMath_CMake_tag_windows
-    - ros-noetic
+
+build_scripts:
   script:
     - apt update && DEBIAN_FRONTEND=noninteractive apt install -y git-core
     - rm -Rf build  # Guarantee that tests and coverage are using latest src and tests
@@ -26,6 +20,31 @@ build:
     - cd build
     - cmake ..
     - make -j8
+
+build_win:
+  rules:
+    - if: $CI_COMMIT_TAG =~ /.*win.*/
+      when: always
+    - when: never
+# Runs at 'build' stage
+  stage: build
+  tags:
+    - "windows docker image"
+  extends: "build_scripts"
+
+# Job name 'build'
+build_linux:
+  rules:
+    - if: $CI_COMMIT_TAG =~ /.*linux.*/
+      when: always
+    - when: never
+# Runs at 'build' stage
+  stage: build
+  tags:
+    # - dtMath_CMake_tag_windows
+    - ros-noetic
+  extends: "build_scripts"
+
 
 # Job name 'test'
 test:
@@ -60,6 +79,6 @@ code_quality:
     - cq-sans-dind
 
 sast:
-  stage: sast
+  stage: test
 
 
