--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,22 +13,23 @@ stages:
 
 
 ".build_scripts":
+  script:
     - rm -rf build  # Guarantee that tests and coverage are using latest src and tests
     - mkdir build
     - cd build
     - cmake ..
     - make -j8
 
-build_win:
-  rules:
-    - if: $CI_COMMIT_TAG =~ /.*win.*/
-      when: always
-    - when: never
-# Runs at 'build' stage
-  stage: build
-  tags:
-    - "dtMath_CMake_tag_windows"
-  extends: ".build_scripts"
+# build_win:
+#   rules:
+#     - if: $CI_COMMIT_TAG =~ /.*win.*/
+#       when: always
+#     - when: never
+# # Runs at 'build' stage
+#   stage: build
+#   tags:
+#     - "dtMath_CMake_tag_windows"
+#   extends: ".build_scripts"
 
 # Job name 'build'
 build_linux:
