Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@
 stages:
   - test
   - build
-  # - example
 
 
 ".build_scripts":
@@ -21,16 +20,16 @@ stages:
     - make -j8
     - ./bin/test
 
-# build_win:
-#   rules:
-#     - if: $CI_COMMIT_TAG =~ /.*win.*/
-#       when: always
-#     - when: never
-# # Runs at 'build' stage
-#   stage: build
-#   tags:
-#     - "dtMath_CMake_tag_windows"
-#   extends: ".build_scripts"
+build_win:
+  rules:
+    - if: $CI_COMMIT_TAG =~ /.*win.*/
+      when: always
+    - when: never
+# Runs at 'build' stage
+  stage: build
+  tags:
+    - "dtMath_CMake_tag_windows"
+  extends: ".build_scripts"
 
 # Job name 'build'
 build_linux:
@@ -48,16 +47,15 @@ build_linux:
   extends: ".build_scripts"
 
 
-# # Job name 'example'
-# example:
-#   # Runs at 'test' stage
-#   stage: example
-#   tags:
-#     # - dtMath_CMake_tag_windows
-#     - ros-noetic
-#   script:
-#     - ./bin/test
-#     - ./build/bin/test
+# Job name 'test'
+test:
+  # Runs at 'test' stage
+  stage: test
+  tags:
+    # - dtMath_CMake_tag_windows
+    - ros-noetic
+  script:
+    - ./bin/test
 
 
 
