--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,30 +15,31 @@ stages:
 ".build_scripts":
   script:
     - apt update && DEBIAN_FRONTEND=noninteractive apt install -y git-core
-    - rm -Rf build  # Guarantee that tests and coverage are using latest src and tests
+    - rm -rf build  # Guarantee that tests and coverage are using latest src and tests
     - mkdir build
     - cd build
     - cmake ..
     - make -j8
     - ./bin/test
 
-build_win:
-  rules:
-    - if: $CI_COMMIT_TAG =~ /.*win.*/
-      when: always
-    - when: never
-# Runs at 'build' stage
-  stage: build
-  tags:
-    - "dtMath_CMake_tag_windows"
-  extends: ".build_scripts"
+# build_win:
+#   rules:
+#     - if: $CI_COMMIT_TAG =~ /.*win.*/
+#       when: always
+#     - when: never
+# # Runs at 'build' stage
+#   stage: build
+#   tags:
+#     - "dtMath_CMake_tag_windows"
+#   extends: ".build_scripts"
 
 # Job name 'build'
 build_linux:
   rules:
-    - if: $CI_COMMIT_TAG =~ /.*linux.*/
-      when: always
-    - when: never
+    # - if: $CI_COMMIT_TAG =~ /.*linux.*/
+    #   when: always
+    # - when: never
+    - when: always # temparay set until windows build complete (230226)
 # Runs at 'build' stage
   stage: build
   tags:
