--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,90 +5,68 @@
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 
-# image: localhost:5000/ubuntu-cpptests:20.04
 
 stages:
-  - test
-  - build
+	- test
+	- build
 
-
-# ".build_scripts":
-#   script:
-#     - rm -rf build  # Guarantee that tests and coverage are using latest src and tests
-#     - mkdir build
-#     - cd build
-#     - cmake .. 
-#     - make -j8
-#     - ./bin/test
-
-# build_win:
-#   rules:
-#     - if: $CI_COMMIT_TAG =~ /.*win.*/
-#       when: always
-#     - when: never
-# # Runs at 'build' stage
-#   stage: build
-#   tags:
-#     - "dtMath_CMake_tag_windows"
-#   script:
-#     - rm -rf build  # Guarantee that tests and coverage are using latest src and tests
-#     - mkdir build
-#     - cd build
-#     - cmake .. "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
-#     - cmake --build . --config Release --target test -j 16
-#     - ./bin/test
+build_win:
+	rules:
+		- if: $CI_COMMIT_TAG =~ /.*v.*/
+			when: always
+		- when: never
+# Runs at 'build' stage
+	stage: build
+	tags:
+		- "dtMath_CMake_tag_windows"
+	script:
+		- cd dev
+        - git clone ssh://git@cody-escm.autoever.com:8022/rlab/art/ctrlpart/personal/joonhee-jo/dt-math-cmake.git
+        - cd dt-math-cmake
+		- rm -rf build  # Guarantee that tests and coverage are using latest src and tests
+		- mkdir build
+		- cd build
+		- cmake .. "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
+		- cmake --build . --config Release --target test
+		- ./bin/test
 #   extends: ".build_scripts"
 
 # Job name 'build'
 build_linux:
-  rules:
-    # - if: $CI_COMMIT_TAG =~ /.*linux.*/
-    #   when: always
-    # - when: never
-    - when: always # temparay set until windows build complete (230226)
+	rules:
+		- if: $CI_COMMIT_TAG =~ /.*v.*/
+			when: always
+		- when: never
+		# - when: always # temparay set until windows build complete (230226)
 # Runs at 'build' stage
-  stage: build
-  tags:
-    # - dtMath_CMake_tag_windows
-    - ros-noetic
-  script:
-    - apt update && DEBIAN_FRONTEND=noninteractive apt install -y git-core
-    - rm -rf build  # Guarantee that tests and coverage are using latest src and tests
-    - mkdir build
-    - cd build
-    - cmake .. 
-    - cmake --build . --config Release --target test -j 16
-    - ./bin/test
-  # extends: ".build_scripts"
-
-
-# # Job name 'test'
-# test:
-#   # Runs at 'test' stage
-#   stage: test
-#   only:
-#     - master
-#   tags:
-#     # - dtMath_CMake_tag_windows
-#     - ros-noetic
-#   script:
-#     - ./bin/test
+	stage: build
+	tags:
+		# - dtMath_CMake_tag_windows
+		- ros-noetic
+	script:
+		- apt update && DEBIAN_FRONTEND=noninteractive apt install -y git-core
+		- rm -rf build  # Guarantee that tests and coverage are using latest src and tests
+		- mkdir build
+		- cd build
+		- cmake .. 
+		- cmake --build . --config Release --target test
+		- ./bin/test
 
 
 
 include:
-  - template: Security/SAST.gitlab-ci.yml
-  - template: Code-Quality.gitlab-ci.yml
+	- template: Security/SAST.gitlab-ci.yml
+	- template: Code-Quality.gitlab-ci.yml
 
 code_quality:
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-  services:
-  tags:
-    - cq-sans-dind
+	rules:
+		- if: $CI_COMMIT_BRANCH == "main"
+		- if: $CI_PIPELINE_SOURCE == "merge_request_event"
+	services:
+	tags:
+		- cq-sans-dind
 
 sast:
-  stage: test
+	stage: test
 
 
