--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,8 @@ build_win:
     - cd build
     - cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
     - cmake --build . --config Release
-    - ./bin/test
+    - cd bin
+    - ./test.exe
     - cd ../..
     - rmdir /s /q dt-math-cmake
 
