Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,8 @@ build_win:
     - cd build
     - cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
     - cmake --build . --config Release
-    - cd bin
-    - .\test.exe
-    - cd '..\..\..'
+    - ./bin/test.exe
+    - cd '../..'
     - rmdir /s /q dt-math-cmake
 
 # Job name 'build'
