--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,9 @@ build_win:
     # // Todo (230227): currently executables are not run. Administrative rights may not be given.
     # - ./bin/test.exe
     # - cd '../..'
-    - rmdir /s dt-math-cmake
-    - rmdir /s dt-math-cmake.tmp
+    # // Todo (230227): currently removing folders are not run. Administrative rights may not be given.
+    # - rmdir /s dt-math-cmake
+    # - rmdir /s dt-math-cmake.tmp
 
 # Job name 'build'
 build_linux:
