--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,18 +62,13 @@ include:
 
 code_quality:
   rules:
-    - if: $CI_COMMIT_TAG =~ /.*v.*/ && ($CI_COMMIT_BRANCH == "main" || $CI_PIPELINE_SOURCE == "merge_request_event")
-      when: always
-    - when: never
+    - if: $CI_COMMIT_BRANCH == "main" 
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   services:
   tags:
     - cq-sans-dind
 
 sast:
-  rules:
-    - if: $CI_COMMIT_TAG =~ /.*v.*/
-      when: always
-    - when: never
   stage: test
 
 
