Check if ARTF_INSTALL_DIR is set and set CMAKE_INSTALL_PREFIX as ARTF_INSTALL_DIR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,17 @@ cmake_policy(SET CMP0077 NEW)
 # Add CMake modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
+# Check if ARTF_INSTALL_DIR is set
+set(ARTF_INSTALL_DIR "$ENV{ARTF_INSTALL_DIR}")
+
+if("${ARTF_INSTALL_DIR}" STREQUAL "")
+    message(FATAL_ERROR "ARTF_INSTALL_DIR is not set.")
+else()
+    message(STATUS "ARTF_INSTALL_DIR: $ENV{ARTF_INSTALL_DIR}")
+endif()
+
+set(CMAKE_PREFIX_PATH "${ARTF_INSTALL_DIR};${CMAKE_PREFIX_PATH}")
+set(CMAKE_INSTALL_PREFIX "${ARTF_INSTALL_DIR}")
 
 # --------------------------------------------------------
 # Set build options
