add user application and build/install instruction.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@
 #
 # date      2024. 07. 08.
 #
-# Copyrignt RoboticsLab ART All rights reserved. 
-# 
-########################################################
+# Copyrignt RoboticsLab ART All rights reserved.
+#
+# #######################################################
 
 cmake_minimum_required(VERSION 3.13)
 
@@ -46,32 +46,36 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Set build options
 option(BUILD_TEST "Build tests for ${PROJECT_NAME}" OFF)
-
+option(BUILD_USER "Build user application" OFF)
 
 # --------------------------------------------------------
 # Fecth all dependent library
 # --------------------------------------------------------
 # include(ProjectDependencies)
 
-
 # --------------------------------------------------------
 # Build
 # --------------------------------------------------------
-# Tests to build 
+# Tests to build
 if(BUILD_TEST)
-	enable_testing()
-	add_subdirectory(test)
+    enable_testing()
+    add_subdirectory(test)
 endif()
 
+# User application
+if(BUILD_USER)
+    add_subdirectory(user)
+endif()
 
 # --------------------------------------------------------
 # Install
 # --------------------------------------------------------
 install(DIRECTORY ./include/dtMath
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/include
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
 )
 
 # --------------------------------------------------------
 # Finalize configuration and print options
 # --------------------------------------------------------
 message(STATUS "BUILD_TEST                          : ${BUILD_TEST}")
+message(STATUS "BUILD_USER                          : ${BUILD_USER}")
