treat ARTF_INSTALL_DIR environment varialbe as not a string but a file-path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ cmake_policy(SET CMP0077 NEW)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 # Check if ARTF_INSTALL_DIR is set
-set(ARTF_INSTALL_DIR "$ENV{ARTF_INSTALL_DIR}")
+file(TO_CMAKE_PATH $ENV{ARTF_INSTALL_DIR} ARTF_INSTALL_DIR)
 
 if("${ARTF_INSTALL_DIR}" STREQUAL "")
     message(FATAL_ERROR "ARTF_INSTALL_DIR is not set.")
